<resources>
    <string name="app_name">育恒教育</string>
    <string name="downloading">下载中...</string>
    <string name="get_data_fail">获取数据失败，请检查您的网络...</string>
    <string name="get_data_server_exception">服务器出现异常...</string>
    <string name="download_cancle">您已取消了的下载...</string>
    <string name="download_fail">下载失败</string>
    <string name="download_ok">下载成功</string>

    <string name="download_msg">正在下载...</string>
    <string name="download_title">"更新提示"</string>
    <string name="version_msg">获取版本失败</string>
    <string name="update_msg">获取更新信息异常</string>
    <string name="update_error_msg">"sd卡不可用，更新失败"</string>
    <string name="save">确定</string>
    <string name="login_msg">正在加载</string>
    <string name="exist_app_ts">再按一次退出程序</string>
    <string name="button_confirm">确 定</string>
    <string name="button_submit">提 交</string>
    <!-- Refresh -->
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开立即刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>
    <string name="tv_loading">正在努力加载,请稍后...</string>

    <!-- XList -->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">最近更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_refesh_time">刚刚</string>
    <string name="xlistview_load_complate">已经全部加载完成</string>

    <!-- 登录 -->
    <string name="sign_in">登 录</string>
    <string name="login_username_hint">用户账号</string>
    <string name="login_password_hint">用户密码</string>
    <string name="login_username_null">请输入用户账号</string>
    <string name="login_fail">登录失败</string>
    <string name="login_password_null">请输入用户密码</string>
    <string name="login_user_notexist">用户不存在</string>
    <string name="login_password_error">用户密码错误</string>
    <string name="login_user_novalid">用户无效</string>

    <!-- bar -->
    <string name="bar_home">首页</string>
    <string name="bar_message">消息</string>
    <string name="bar_my">我</string>
    <string name="what_btn">立即体验</string>
    <string name="search">请输入关键字</string>

    <!--home -->
    <string name="course">课程表</string>
    <string name="course_title">我的课程表</string>
    <string name="message">消息通知</string>
    <string name="beike">备课表</string>
    <string name="my_info">个人信息</string>

    <!-- message -->
    <string name="msg_detail">查看详情</string>
    <string name="msg_title">消息列表</string>
    <string name="lesson_msg_title">发现新课程表</string>
    <string name="lesson_msg_content">您有新课程表，请及时查看！</string>
    <string name="lesson_no_plan">暂无教学进度</string>

    <!-- my -->
    <string name="user_title">用户中心</string>
    <string name="setting_exit">退出登录</string>
    <string name="user_info">用户信息</string>
    <string name="edit_user_pass">密码修改</string>
    <string name="version">当前版本号：</string>
    <string name="setting_exit_btn">退出</string>
    <string name="setting_cance">取消</string>
    <string name="setting_exit_cfg">确认要退出登录？</string>
    <string name="setting_userinfo_username">用户名：</string>
    <string name="setting_userinfo_truename">用户姓名：</string>
    <string name="setting_userinfo_pass">用户密码：</string>
    <string name="setting_userinfo_mphone">手机号码：</string>
    <string name="user_info_setting_title">个人信息设置</string>
    <string name="userinfo_truename_null">请输入用户姓名</string>
    <string name="userinfo_pass_null">请输入用户密码</string>
    <string name="userinfo_mphone_null">请输入手机号码</string>
    <string name="setting_userinfo_ok">个人信息设置成功</string>
    <string name="setting_userinfo_error">个人信息设置失败</string>
    <string name="edit_user_pass_title">密码修改</string>
    <string name="edit_user_newpass">新密码：</string>
    <string name="edit_user_newpass_hint">请输入新密码</string>
    <string name="edit_user_newpass_agin">确认新密码：</string>
    <string name="edit_user_newpass_agin_hint">再次输入新密码</string>
    <string name="edit_user_pass_nosame">两次输入密码不一致</string>
    <string name="edit_user_pass_novalid">请输入6至16位数字或字母</string>
    <string name="edit_user_pass_ok">密码设置成功</string>
    <string name="edit_user_pass_error">密码设置失败</string>

    <!-- 备课表 -->
    <string name="prel_title">备课表</string>
</resources>
