<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/class_index_item_bg">

    <LinearLayout
        android:id="@+id/bottom_tool"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/padding_48_normal"
        android:layout_alignParentBottom="true"
        android:background="@android:color/white"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:id="@+id/lin_home"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_home"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/home_select" />

                <TextView
                    android:id="@+id/tx_home"
                    style="@style/TextStyle_11_6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/bar_home" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_message"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_message"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/message_disselect" />

                <TextView
                    android:id="@+id/tx_select_class"
                    style="@style/TextStyle_11_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/bar_message" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/lin_my"
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0"
                android:clickable="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/img_user"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/my_disselect" />

                <TextView
                    android:id="@+id/tx_user"
                    style="@style/TextStyle_11_7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:singleLine="true"
                    android:text="@string/bar_my" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>