<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

   >

    <com.yh.view.CustomerScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/ll_dynamic"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@mipmap/user_setting_top_bg"
                android:gravity="center"
                android:orientation="vertical">
                <ImageView
                    android:id="@+id/pic"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:src="@mipmap/myhead" />

                <TextView
                    android:id="@+id/truename"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="昵称"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:textColor="@color/white"
                    />

                <TextView
                    android:id="@+id/username"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:contentDescription="@string/app_name"
                    android:scaleType="fitXY"
                    android:text="用户名："
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/two"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_dynamic"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:background="@color/devide_line" />

                <RelativeLayout
                    android:id="@+id/user_info_rl"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp">

                    <ImageView
                        android:id="@+id/biaoqing"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@mipmap/ico_user" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/biaoqing"
                        android:text="@string/user_info"
                        android:textAppearance="@style/TextStyle_16_8" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY"
                        android:src="@mipmap/common_arrorright" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:background="@color/devide_line" />

                <RelativeLayout
                    android:id="@+id/edit_pass"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp">

                    <ImageView
                        android:id="@+id/passImg"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@mipmap/setting_user_info" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/passImg"
                        android:text="@string/edit_user_pass"
                        android:textAppearance="@style/TextStyle_16_8" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY"
                        android:src="@mipmap/common_arrorright" />
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:background="@color/devide_line" />

                <RelativeLayout
                    android:id="@+id/exit_rl"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_margin="5dp">

                    <ImageView
                        android:id="@+id/exitImg"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:contentDescription="@string/app_name"
                        android:src="@mipmap/exit" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="10dp"
                        android:layout_toRightOf="@id/exitImg"
                        android:text="@string/setting_exit"
                        android:textAppearance="@style/TextStyle_16_8" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="10dp"
                        android:contentDescription="@string/app_name"
                        android:scaleType="fitXY"
                        android:src="@mipmap/common_arrorright" />
                </RelativeLayout>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:background="@color/devide_line" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/version_ll"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/two"
                android:orientation="vertical"
                android:gravity="center">
                <TextView
                    android:id="@+id/version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="40dp"
                    android:gravity="center"
                    android:lineSpacingExtra="5dp"
                    android:singleLine="false"
                    android:text="@string/version"
                    android:textColor="@color/gray_font"
                    android:textSize="12sp" />
            </LinearLayout>
        </RelativeLayout>
    </com.yh.view.CustomerScrollView>
</RelativeLayout>